# crabwalk

./: .gitignore  Cargo.toml  README.md  crabwalk_schema.html  database_schema.xml  duckdb_ast_debug.json  run-simple-example  run_jaffle_shop.sh  test_extract.rs  test_query.sql  test_sql.sql
crabwalk-web/: DEBUG.md  README.md  index.html  package-lock.json  package.json  perspective.d.ts  run-react-app.js  serve-perspective-test.js  tsconfig.server.json  vite.config.ts
crabwalk-web/public/: perspective-init.html  wasm-worker.js
crabwalk-web/public/wasm/: perspective-js.wasm  perspective-server.wasm  perspective-viewer.wasm  perspective.esm.js  perspective.js
crabwalk-web/scripts/: debug_mermaid.sh  run-with-db.sh  setup-wasm.js
crabwalk-web/src/: App.tsx  global.d.ts  index.css  perspective.d.ts  types.ts
crabwalk-web/src/components/: DatabaseExplorer.tsx  (+5 more)
examples/: run_ordered.sql
examples/jaffle_shop/: README.md  config.json  database_schema.xml  lineage.mmd  run-jaffle
examples/race_data/: database_schema.xml  driver_fact.sql  lineage.mmd  race_summary.sql  races.sql  sample_parquet.sql
examples/simple/: database_schema.xml  lineage.mmd
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  output.rs
src/executor/: mod.rs  output.rs
src/parser/: ast_test.rs  config.rs  dependencies.rs  lineage.rs  mod.rs  sql.rs
src/schema/: mod.rs  visualization.rs
src/storage/: mod.rs
tests/: config_test.rs  jaffle_shop_lineage_test.rs  parser_dependencies_test.rs  parser_lineage_test.rs  parser_sql_test.rs  race_data_lineage_test.rs
(+42 files in other folders)
