[package]
name = "crabwalk"
version = "0.1.0"
edition = "2021"
description = "A SQL transformation orchestrator written in Rust"
authors = ["Crabwalk Contributors"]
license = "MIT"
default-run = "crabwalk"

[dependencies]
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }
# DuckDB integration
duckdb = { version = "1.2.0", features = ["bundled"] }
# SQL parsing and manipulation
sqlparser = "0.49.0"
# File system operations
walkdir = "2.4"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
base64 = "0.21"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Async runtime
tokio = { version = "1.32", features = ["full"] }
# Regular expressions
regex = "1.9"
# Path handling
pathdiff = "0.2"
# Graph algorithms
petgraph = "0.6"
# Terminal UI
crossterm = "0.27"
console = "0.15"
# Temporary files
tempfile = "3.10"
# AWS S3 integration (optional)
rusoto_core = { version = "0.48", optional = true }
rusoto_s3 = { version = "0.48", optional = true }
# System bindings for handling error output
libc = "0.2"
# Compression for Mermaid diagrams
flate2 = "1.0"

[features]
default = []
s3 = ["rusoto_core", "rusoto_s3"]
